<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:scaleType="centerCrop"
            android:src="@drawable/c"
             />

    <LinearLayout
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        >


        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/name"
            android:textColor="#fff"
            android:backgroundTint="#8f5221"
            android:inputType="textCapCharacters"
            android:textColorHint="@android:color/background_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            style="@style/headingStyle"/>

        <CheckBox
            android:id="@+id/whippedcream_checkBox"
            style="@style/detailsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:buttonTint="#fff"
            android:checked="false"
            android:paddingLeft="24dp"
            android:text="@string/whippedcream"
            android:textColorLink="@android:color/background_light" />

        <CheckBox
            android:id="@+id/choclate_checkBox"
            style="@style/detailsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#fff"
            android:checked="false"
            android:paddingLeft="24dp"
            android:text="@string/choclate" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Quantity"
            style="@style/headingStyle"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" >

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                style="@style/buttonStyle"
                android:text="-" />


            <TextView
                android:id="@+id/text_view_quatity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                style="@style/detailsStyle"
                android:text="0" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                style="@style/buttonStyle"
                android:text="+"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/headingStyle"
            android:text="@string/price"
            />

        <TextView
            android:id="@+id/text_view_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/detailsStyle"
            android:text="$0.0"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/buttonStyle"
            android:onClick="submitOrder"
            android:text="@string/order" />






    </LinearLayout>

    </RelativeLayout>
</ScrollView>
